--- a/stylebase.css
+++ b/stylebase.css
@@ -18,10 +18,6 @@ a:visited {
 	color: #000000
 }
 
-.heading {
-	margin: 1rem 0 1rem 1rem;
-}
-
 #bloc_page {
 	width: 100%;
 }
@@ -121,13 +117,17 @@ nav p {
 	cursor: pointer;
 }
 
-.carte_guide {
+.carte-guide {
 	width: 100%;
 	height: 340px;
 	margin: 30px 0 50px 0;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	justify-content: space-between;	
+}
+
+.heading {
+	margin: 1rem 0 1rem 1rem;
 }
 
 .carte_plats {
@@ -242,11 +242,7 @@ nav p {
 	padding: 0;
 }
 
-.restos_nom h3 {
-	margin: 0 0 5px 10px;
-}
-
-.restos_nom p {
+.restos_nom h3, .restos_nom p {
 	margin: 0 0 5px 10px;
 }
 
