--- a/sass/style.css
+++ b/sass/style.css
@@ -259,6 +259,8 @@
   }
   .heart .plain {
     color: rgba(147, 86, 220, 0);
+    -webkit-transition: color 1s;
+    transition: color 1s;
   }
   .heart .plain:active {
     color: #9356dc;
@@ -372,6 +374,8 @@
     position: absolute;
     top: 30px;
     right: 20px;
+    -webkit-transition: 1s;
+    transition: 1s;
   }
   .corps-page .corps-page__heading:hover {
     cursor: pointer;
@@ -385,20 +389,12 @@
   }
   .corps-page .corps-page__heading .plain {
     color: rgba(147, 86, 220, 0);
+    -webkit-transition: color 1s;
+    transition: color 1s;
   }
   .corps-page .corps-page__heading .plain:active {
     color: #9356dc;
     z-index: 2;
-  }
-  .check {
-    width: 18%;
-    height: 100%;
-    font-size: 1.5rem;
-    color: #fff;
-    background-color: #99e2d0;
-    border-radius: 0 15px 15px 0;
-    border: none;
-    display: none;
   }
   .carte hr {
     width: 40px;
@@ -406,7 +402,7 @@
     margin: 0 0 1rem 1rem;
   }
   .carte__bouton--modif {
-    width: 90%;
+    width: 93%;
     background-color: white;
     -webkit-box-shadow: none;
             box-shadow: none;
@@ -419,8 +415,24 @@
     margin-left: 0.75rem;
     padding: 0 0 10px 0;
   }
+  .carte__bouton--modif:hover {
+    cursor: pointer;
+  }
   .carte__bouton--modif .card__text > * {
     margin: 0.25rem 0 0 0.7rem;
+  }
+  .carte__bouton--modif .check {
+    width: 18%;
+    height: 100%;
+    font-size: 1.5rem;
+    color: #fff;
+    background-color: #99e2d0;
+    border-radius: 0 15px 15px 0;
+    border: none;
+    display: none;
+  }
+  .carte__bouton--modif .check:active {
+    display: block;
   }
   .carte__bouton--modif h4 {
     margin: 5px 10px 5px 0;
