--- a/sass/style.css
+++ b/sass/style.css
@@ -1,13 +1,9 @@
 @charset "UTF-8";
 @media (max-width: 480px) {
   /* Ici on va definir les styles CSS pour les plus petits écrans*/
-  html {
+  * {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
-  }
-  * {
-    -webkit-box-sizing: inherit;
-            box-sizing: inherit;
   }
   body {
     font-size: 16px;
@@ -25,8 +21,121 @@
   a:visited {
     color: #000;
   }
+  .loader-container {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    margin: 100% auto;
+    -webkit-transform-origin: top;
+            transform-origin: top;
+    -webkit-transform: scaleY(0);
+            transform: scaleY(0);
+    -webkit-animation: loader-spinner 3s linear;
+            animation: loader-spinner 3s linear;
+    z-index: 0;
+  }
+  .loader-container .loader1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    border: solid 4px transparent;
+    border-top-color: #9356dc;
+    border-left-color: #9356dc;
+    border-radius: 50%;
+    -webkit-animation: loader 1.6s linear infinite;
+            animation: loader 1.6s linear infinite;
+  }
+  .loader-container .loader2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 75%;
+    height: 75%;
+    border: solid 4px transparent;
+    border-top-color: #99e2d0;
+    border-left-color: #99e2d0;
+    border-radius: 50%;
+    -webkit-animation: loader2 1.4s linear infinite;
+            animation: loader2 1.4s linear infinite;
+  }
+  .loader-container .loader3 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 50%;
+    height: 50%;
+    border: solid 4px transparent;
+    border-top-color: #ff79da;
+    border-left-color: #ff79da;
+    border-radius: 50%;
+    -webkit-animation: loader 1.2s linear infinite;
+            animation: loader 1.2s linear infinite;
+  }
+  @-webkit-keyframes loader-spinner {
+    0% {
+      -webkit-transform: scale(0);
+              transform: scale(0);
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+  }
+  @keyframes loader-spinner {
+    0% {
+      -webkit-transform: scale(0);
+              transform: scale(0);
+    }
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+  }
+  @-webkit-keyframes loader {
+    from {
+      -webkit-transform: translate(-50%, -50%) rotate(0deg);
+              transform: translate(-50%, -50%) rotate(0deg);
+    }
+    to {
+      -webkit-transform: translate(-50%, -50%) rotate(360deg);
+              transform: translate(-50%, -50%) rotate(360deg);
+    }
+  }
+  @keyframes loader {
+    from {
+      -webkit-transform: translate(-50%, -50%) rotate(0deg);
+              transform: translate(-50%, -50%) rotate(0deg);
+    }
+    to {
+      -webkit-transform: translate(-50%, -50%) rotate(360deg);
+              transform: translate(-50%, -50%) rotate(360deg);
+    }
+  }
+  @-webkit-keyframes loader2 {
+    from {
+      -webkit-transform: translate(-50%, -50%) rotate(0deg);
+              transform: translate(-50%, -50%) rotate(0deg);
+    }
+    to {
+      -webkit-transform: translate(-50%, -50%) rotate(-360deg);
+              transform: translate(-50%, -50%) rotate(-360deg);
+    }
+  }
+  @keyframes loader2 {
+    from {
+      -webkit-transform: translate(-50%, -50%) rotate(0deg);
+              transform: translate(-50%, -50%) rotate(0deg);
+    }
+    to {
+      -webkit-transform: translate(-50%, -50%) rotate(-360deg);
+              transform: translate(-50%, -50%) rotate(-360deg);
+    }
+  }
   .block-page {
     width: 100%;
+    z-index: 100;
   }
   .entete {
     width: 100%;
@@ -92,6 +201,7 @@
     border-radius: 3.15rem;
     background-image: -webkit-gradient(linear, left top, left bottom, from(#ff79da), to(#9356dc));
     background-image: linear-gradient(#ff79da, #9356dc);
+    opacity: 1;
     font-size: 1rem;
     font-weight: 300;
     color: white;
@@ -101,14 +211,11 @@
     -webkit-box-shadow: 0 6px 10px rgba(147, 86, 220, 0.4);
             box-shadow: 0 6px 10px rgba(147, 86, 220, 0.4);
     min-width: 220px;
-    -webkit-transition: all 600ms ease-in-out;
-    transition: all 600ms ease-in-out;
+    -webkit-transition: all 600ms linear;
+    transition: all 600ms linear;
   }
   .bouton:hover {
-    -webkit-transform: scale(1.05);
-            transform: scale(1.05);
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#9356dc), to(#ff79da));
-    background-image: linear-gradient(#9356dc, #ff79da);
+    opacity: 0.8;
     -webkit-box-shadow: 0 6px 10px rgba(147, 86, 220, 0.6);
             box-shadow: 0 6px 10px rgba(147, 86, 220, 0.6);
   }
@@ -139,7 +246,8 @@
   .carte__bouton {
     width: 90%;
     height: 75px;
-    background-color: rgba(147, 86, 220, 0.2);
+    background-color: rgba(147, 86, 220, 0.3);
+    opacity: 1;
     border-radius: 15px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -150,9 +258,11 @@
     -webkit-box-shadow: 0 6px 10px rgba(147, 86, 220, 0.4);
             box-shadow: 0 6px 10px rgba(147, 86, 220, 0.4);
     margin: 0 0 10px 20px;
+    -webkit-transition: all 400ms linear;
+    transition: all 400ms linear;
   }
   .carte__bouton:hover {
-    background-color: rgba(147, 86, 220, 0.1);
+    opacity: 0.7;
     -webkit-box-shadow: 0 6px 5px rgba(147, 86, 220, 0.5);
             box-shadow: 0 6px 5px rgba(147, 86, 220, 0.5);
   }
@@ -197,8 +307,8 @@
     padding-bottom: 2rem;
   }
   .card .card__heading {
-    width: 99%;
-    margin: 1.9rem 0 0 1.2rem;
+    width: 97%;
+    margin: 1.9rem 0 0 1.5rem;
   }
   .card .card__link {
     background-color: #fff;
@@ -255,19 +365,23 @@
     cursor: pointer;
   }
   .heart .vide {
-    color: black;
+    color: #000;
+    opacity: 1;
+    -webkit-transition: color 1s;
+    transition: color 1s;
   }
   .heart .vide:active {
-    color: rgba(0, 0, 0, 0);
+    opacity: 0;
     z-index: 1;
   }
   .heart .plain {
-    color: rgba(147, 86, 220, 0);
+    color: #9356dc;
+    opacity: 0;
     -webkit-transition: color 1s;
     transition: color 1s;
   }
   .heart .plain:active {
-    color: #9356dc;
+    opacity: 1;
     z-index: 2;
   }
   /*Pour le bouton Nouveau */
@@ -342,7 +456,7 @@
   .corps-page {
     width: 100%;
     border-radius: 2rem 2rem 0 0;
-    background-color: #e1dbe7;
+    background-color: #ece3f5;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
