--- a/sass/style.css
+++ b/sass/style.css
@@ -21,25 +21,29 @@
   a:visited {
     color: #000;
   }
+  .block-page {
+    width: 100%;
+    z-index: 11;
+  }
   .loader-container {
-    position: relative;
-    width: 100px;
-    height: 100px;
-    margin: 100% auto;
+    position: fixed;
+    width: 100%;
+    height: 100%;
     -webkit-transform-origin: top;
             transform-origin: top;
     -webkit-transform: scaleY(0);
             transform: scaleY(0);
-    -webkit-animation: loader-spinner 3s linear;
-            animation: loader-spinner 3s linear;
-    z-index: 0;
+    -webkit-animation: loader-spinner 2s linear;
+            animation: loader-spinner 2s linear;
+    z-index: 10;
+    background: #fff;
   }
   .loader-container .loader1 {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 100%;
-    height: 100%;
+    width: 100px;
+    height: 100px;
     border: solid 4px transparent;
     border-top-color: #9356dc;
     border-left-color: #9356dc;
@@ -51,8 +55,8 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 75%;
-    height: 75%;
+    width: 75px;
+    height: 75px;
     border: solid 4px transparent;
     border-top-color: #99e2d0;
     border-left-color: #99e2d0;
@@ -64,8 +68,8 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 50%;
-    height: 50%;
+    width: 50px;
+    height: 50px;
     border: solid 4px transparent;
     border-top-color: #ff79da;
     border-left-color: #ff79da;
@@ -75,8 +79,8 @@
   }
   @-webkit-keyframes loader-spinner {
     0% {
-      -webkit-transform: scale(0);
-              transform: scale(0);
+      -webkit-transform: scale(1);
+              transform: scale(1);
     }
     100% {
       -webkit-transform: scale(1);
@@ -85,8 +89,8 @@
   }
   @keyframes loader-spinner {
     0% {
-      -webkit-transform: scale(0);
-              transform: scale(0);
+      -webkit-transform: scale(1);
+              transform: scale(1);
     }
     100% {
       -webkit-transform: scale(1);
@@ -132,10 +136,6 @@
       -webkit-transform: translate(-50%, -50%) rotate(-360deg);
               transform: translate(-50%, -50%) rotate(-360deg);
     }
-  }
-  .block-page {
-    width: 100%;
-    z-index: 100;
   }
   .entete {
     width: 100%;
@@ -247,7 +247,6 @@
     width: 90%;
     height: 75px;
     background-color: rgba(147, 86, 220, 0.3);
-    opacity: 1;
     border-radius: 15px;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -262,7 +261,7 @@
     transition: all 400ms linear;
   }
   .carte__bouton:hover {
-    opacity: 0.7;
+    background-color: rgba(147, 86, 220, 0.2);
     -webkit-box-shadow: 0 6px 5px rgba(147, 86, 220, 0.5);
             box-shadow: 0 6px 5px rgba(147, 86, 220, 0.5);
   }
@@ -285,7 +284,49 @@
   .carte--modif {
     margin: 0;
     padding: 0;
+    position: relative;
     height: auto;
+    opacity: 1;
+    -webkit-animation: carte 3s ease-in-out;
+            animation: carte 3s ease-in-out;
+  }
+  @-webkit-keyframes carte {
+    0% {
+      opacity: 0;
+    }
+    20% {
+      opacity: 0.2 0;
+    }
+    50% {
+      opacity: 0.4 0;
+    }
+    75% {
+      opacity: 0.7 0;
+    }
+    100% {
+      -webkit-transform: scaleY(1);
+              transform: scaleY(1);
+      opacity: 1;
+    }
+  }
+  @keyframes carte {
+    0% {
+      opacity: 0;
+    }
+    20% {
+      opacity: 0.2 0;
+    }
+    50% {
+      opacity: 0.4 0;
+    }
+    75% {
+      opacity: 0.7 0;
+    }
+    100% {
+      -webkit-transform: scaleY(1);
+              transform: scaleY(1);
+      opacity: 1;
+    }
   }
   /*Styles pour carte des restaurants*/
   .card {
@@ -365,23 +406,19 @@
     cursor: pointer;
   }
   .heart .vide {
-    color: #000;
-    opacity: 1;
-    -webkit-transition: color 1s;
-    transition: color 1s;
+    color: black;
   }
   .heart .vide:active {
-    opacity: 0;
+    color: rgba(0, 0, 0, 0);
     z-index: 1;
   }
   .heart .plain {
-    color: #9356dc;
-    opacity: 0;
+    color: rgba(147, 86, 220, 0);
     -webkit-transition: color 1s;
     transition: color 1s;
   }
   .heart .plain:active {
-    opacity: 1;
+    color: #9356dc;
     z-index: 2;
   }
   /*Pour le bouton Nouveau */
