--- a/sass/style.scss
+++ b/sass/style.scss
@@ -30,23 +30,28 @@ $tertiary:  #99e2d0;
         }
     }
 
+    .block-page {
+        width: 100%;
+        z-index: 11;
+    }
+
     .loader-container {
-        position: relative;
-        width: 100px;
-        height: 100px;
-        margin: 100% auto;
+        position: fixed;
+        width: 100%;
+        height: 100%;
         transform-origin: top;
         transform: scaleY(0);
-        animation: loader-spinner 3s linear;
-        z-index: 0;
+        animation: loader-spinner 2s linear;
+        z-index: 10;
+        background: #fff;
     }
 
     .loader-container .loader1{
         position: absolute;
         top: 50%;
         left: 50%;
-        width: 100%;
-        height: 100%;
+        width: 100px;
+        height: 100px;
         border: solid 4px transparent;
         border-top-color: $primary;
         border-left-color: $primary;
@@ -58,8 +63,8 @@ $tertiary:  #99e2d0;
         position: absolute;
         top: 50%;
         left: 50%;
-        width: 75%;
-        height: 75%;
+        width: 75px;
+        height: 75px;
         border: solid 4px transparent;
         border-top-color: $tertiary;
         border-left-color: $tertiary;
@@ -71,8 +76,8 @@ $tertiary:  #99e2d0;
         position: absolute;
         top: 50%;
         left: 50%;
-        width: 50%;
-        height: 50%;
+        width: 50px;
+        height: 50px;
         border: solid 4px transparent;
         border-top-color: $secondary;
         border-left-color: $secondary;
@@ -82,7 +87,7 @@ $tertiary:  #99e2d0;
 
     @keyframes loader-spinner{
         0% {
-            transform: scale(0);
+            transform: scale(1);
         }
         
         100% {
@@ -107,11 +112,7 @@ $tertiary:  #99e2d0;
             transform: translate(-50%, -50%) rotate(-360deg);
         }
     }
-
-    .block-page {
-        width: 100%;
-        z-index: 100;
-    }    
+   
 
     .entete {
         width: 100%;
@@ -203,7 +204,6 @@ $tertiary:  #99e2d0;
         width: 90%;
         height: 75px;
         background-color: rgba($primary, 0.3);
-        opacity: 1;
         border-radius: 15px;
         display: flex;
         align-items: center;
@@ -212,7 +212,7 @@ $tertiary:  #99e2d0;
         transition: all 400ms linear;
 
         &:hover {
-            opacity: 0.7;
+            background-color: rgba($primary, 0.2);
             box-shadow: 0 6px 5px rgba($primary, 0.5);
         }
 
@@ -237,8 +237,32 @@ $tertiary:  #99e2d0;
     .carte--modif {
         margin: 0;
         padding: 0;
+        position: relative;
         height: auto;
+        opacity: 1;
+        animation: carte 3s ease-in-out;
     }
+
+    @keyframes carte {
+        0% {
+            opacity: 0;
+        }
+        20% {
+            opacity: 0.2 0;
+        }
+        50% {
+            opacity: 0.4 0;
+        }
+        75% {
+            opacity: 0.7 0;
+        }
+        100% {
+            transform: scaleY(1);
+            opacity: 1;
+        }
+
+    }
+
 
     /*Styles pour carte des restaurants*/
     .card { 
@@ -307,22 +331,19 @@ $tertiary:  #99e2d0;
             cursor: pointer;
         }
 
-        & .vide {
-            color: #000;
-            opacity: 1;
-            transition: color 1s;
+        .vide {
+            color: rgba(#000, 1);
             &:active {
-                opacity: 0;
+                color: rgba(#000, 0);
                 z-index: 1;
             }
         }
     
         & .plain {
-            color: $primary;
-            opacity: 0;
+            color: rgba($primary, 0);
             transition: color 1s;
             &:active {
-                opacity: 1;
+                color: rgba($primary, 1);
                 z-index: 2;
             }
         }    
