--- a/sass/style.css
+++ b/sass/style.css
@@ -281,53 +281,6 @@
     font-size: 1.2rem;
     color: #9356dc;
   }
-  .carte--modif {
-    margin: 0;
-    padding: 0;
-    position: relative;
-    height: auto;
-    opacity: 1;
-    -webkit-animation: carte 3s ease-in-out;
-            animation: carte 3s ease-in-out;
-  }
-  @-webkit-keyframes carte {
-    0% {
-      opacity: 0;
-    }
-    20% {
-      opacity: 0.2 0;
-    }
-    50% {
-      opacity: 0.4 0;
-    }
-    75% {
-      opacity: 0.7 0;
-    }
-    100% {
-      -webkit-transform: scaleY(1);
-              transform: scaleY(1);
-      opacity: 1;
-    }
-  }
-  @keyframes carte {
-    0% {
-      opacity: 0;
-    }
-    20% {
-      opacity: 0.2 0;
-    }
-    50% {
-      opacity: 0.4 0;
-    }
-    75% {
-      opacity: 0.7 0;
-    }
-    100% {
-      -webkit-transform: scaleY(1);
-              transform: scaleY(1);
-      opacity: 1;
-    }
-  }
   /*Styles pour carte des restaurants*/
   .card {
     width: 100%;
@@ -557,6 +510,53 @@
     border: 2px solid #99e2d0;
     margin: 0 0 1rem 1rem;
   }
+  .carte--modif {
+    margin: 0;
+    padding: 0;
+    position: relative;
+    height: auto;
+  }
+  .carte--modif .carte__bouton--modif {
+    opacity: 1;
+    -webkit-animation: carte 3000ms both;
+            animation: carte 3000ms both;
+  }
+  .carte--modif .carte__bouton--modif--1 {
+    -webkit-animation-delay: 750ms;
+            animation-delay: 750ms;
+  }
+  .carte--modif .carte__bouton--modif--2 {
+    -webkit-animation-delay: 1500ms;
+            animation-delay: 1500ms;
+  }
+  .carte--modif .carte__bouton--modif--3 {
+    -webkit-animation-delay: 2250ms;
+            animation-delay: 2250ms;
+  }
+  .carte--modif .carte__bouton--modif--4 {
+    -webkit-animation-delay: 3000ms;
+            animation-delay: 3000ms;
+  }
+  @-webkit-keyframes carte {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: scaleY(1);
+              transform: scaleY(1);
+      opacity: 1;
+    }
+  }
+  @keyframes carte {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      -webkit-transform: scaleY(1);
+              transform: scaleY(1);
+      opacity: 1;
+    }
+  }
   .carte__bouton--modif {
     width: 93%;
     background-color: white;
@@ -573,8 +573,8 @@
   }
   .carte__bouton--modif h4 {
     height: 96%;
-    padding: 2.4rem 0 0 0.8rem;
-    margin: 0;
+    padding: 2.8rem 0.4rem 0 0.4rem;
+    margin: 0 0.1rem;
     -webkit-transition: -webkit-transform 500ms ease-out;
     transition: -webkit-transform 500ms ease-out;
     transition: transform 500ms ease-out;
@@ -632,16 +632,16 @@
     -webkit-transform: rotate(0deg);
             transform: rotate(0deg);
   }
-  .carte__bouton--special {
+  .carte__bouton--modif .carte__bouton--special {
     height: 100px;
   }
-  .carte__bouton--special h4 {
+  .carte__bouton--modif .carte__bouton--special h4 {
     padding-top: 3.9rem;
   }
-  .carte__bouton--modif h4 {
+  .carte__bouton--modif .carte__bouton--modif h4 {
     margin: 5px 10px 5px 0;
   }
-  .carte__bouton--modif p {
+  .carte__bouton--modif .carte__bouton--modif p {
     font-size: 0.95rem;
   }
   .carte__bouton--modif:hover {
