--- a/sass/style.css
+++ b/sass/style.css
@@ -632,12 +632,6 @@
     -webkit-transform: rotate(0deg);
             transform: rotate(0deg);
   }
-  .carte__bouton--modif .carte__bouton--special {
-    height: 100px;
-  }
-  .carte__bouton--modif .carte__bouton--special h4 {
-    padding-top: 3.9rem;
-  }
   .carte__bouton--modif .carte__bouton--modif h4 {
     margin: 5px 10px 5px 0;
   }
@@ -648,6 +642,12 @@
     background-color: #fff;
     -webkit-box-shadow: none;
             box-shadow: none;
+  }
+  .carte__bouton--special {
+    height: 100px;
+  }
+  .carte__bouton--special h4 {
+    padding-top: 3.9rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
