--- a/sass/style.css
+++ b/sass/style.css
@@ -25,7 +25,7 @@
     width: 100%;
     z-index: 11;
   }
-  .loader-container {
+  .loader {
     position: fixed;
     width: 100%;
     height: 100%;
@@ -36,9 +36,9 @@
     -webkit-animation: loader-spinner 2s linear;
             animation: loader-spinner 2s linear;
     z-index: 10;
-    background: #fff;
+    background: #99e2d0;
   }
-  .loader-container .loader1 {
+  .loader__1 {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -48,23 +48,23 @@
     border-top-color: #9356dc;
     border-left-color: #9356dc;
     border-radius: 50%;
-    -webkit-animation: loader 1.6s linear infinite;
-            animation: loader 1.6s linear infinite;
+    -webkit-animation: loader1 1.6s linear infinite;
+            animation: loader1 1.6s linear infinite;
   }
-  .loader-container .loader2 {
+  .loader__2 {
     position: absolute;
     top: 50%;
     left: 50%;
     width: 75px;
     height: 75px;
     border: solid 4px transparent;
-    border-top-color: #99e2d0;
-    border-left-color: #99e2d0;
+    border-top-color: white;
+    border-left-color: white;
     border-radius: 50%;
     -webkit-animation: loader2 1.4s linear infinite;
             animation: loader2 1.4s linear infinite;
   }
-  .loader-container .loader3 {
+  .loader__3 {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -74,8 +74,8 @@
     border-top-color: #ff79da;
     border-left-color: #ff79da;
     border-radius: 50%;
-    -webkit-animation: loader 1.2s linear infinite;
-            animation: loader 1.2s linear infinite;
+    -webkit-animation: loader1 1.2s linear infinite;
+            animation: loader1 1.2s linear infinite;
   }
   @-webkit-keyframes loader-spinner {
     0% {
@@ -97,7 +97,7 @@
               transform: scale(1);
     }
   }
-  @-webkit-keyframes loader {
+  @-webkit-keyframes loader1 {
     from {
       -webkit-transform: translate(-50%, -50%) rotate(0deg);
               transform: translate(-50%, -50%) rotate(0deg);
@@ -107,7 +107,7 @@
               transform: translate(-50%, -50%) rotate(360deg);
     }
   }
-  @keyframes loader {
+  @keyframes loader1 {
     from {
       -webkit-transform: translate(-50%, -50%) rotate(0deg);
               transform: translate(-50%, -50%) rotate(0deg);
@@ -465,43 +465,43 @@
     right: 0;
     margin: 0;
   }
-  .corps-page .corps-page__heading {
+  .corps-page__heading {
     width: 95%;
     margin: 1.5rem 0 0 1rem;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
   }
-  .corps-page .corps-page__heading .corps-page__titre {
+  .corps-page__heading .corps-page__titre {
     font-family: 'Shrikhand', sans-serif;
     font-size: 1.8rem;
     margin: 0;
     padding: 0;
     letter-spacing: 1px;
   }
-  .corps-page .corps-page__heading .heart--modif {
+  .corps-page__heading .heart--modif {
     position: absolute;
     top: 30px;
     right: 20px;
     -webkit-transition: 1s;
     transition: 1s;
   }
-  .corps-page .corps-page__heading:hover {
+  .corps-page__heading:hover {
     cursor: pointer;
   }
-  .corps-page .corps-page__heading .vide {
+  .corps-page__heading .vide {
     color: black;
   }
-  .corps-page .corps-page__heading .vide:active {
+  .corps-page__heading .vide:active {
     color: rgba(0, 0, 0, 0);
     z-index: 1;
   }
-  .corps-page .corps-page__heading .plain {
+  .corps-page__heading .plain {
     color: rgba(147, 86, 220, 0);
     -webkit-transition: color 1s;
     transition: color 1s;
   }
-  .corps-page .corps-page__heading .plain:active {
+  .corps-page__heading .plain:active {
     color: #9356dc;
     z-index: 2;
   }
