--- a/sass/style.scss
+++ b/sass/style.scss
@@ -35,7 +35,7 @@ $tertiary:  #99e2d0;
         z-index: 11;
     }
 
-    .loader-container {
+    .loader {
         position: fixed;
         width: 100%;
         height: 100%;
@@ -43,59 +43,60 @@ $tertiary:  #99e2d0;
         transform: scaleY(0);
         animation: loader-spinner 2s linear;
         z-index: 10;
-        background: #fff;
+        background: $tertiary;
+
+        &__1 {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 100px;
+            height: 100px;
+            border: solid 4px transparent;
+            border-top-color: $primary;
+            border-left-color: $primary;
+            border-radius: 50%;
+            animation: loader1 1.6s linear infinite;
+        }
+
+        &__2 {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 75px;
+            height: 75px;
+            border: solid 4px transparent;
+            border-top-color: white;
+            border-left-color: white;
+            border-radius: 50%;
+            animation: loader2 1.4s linear infinite;
+        }
+        
+    
+        &__3 {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 50px;
+            height: 50px;
+            border: solid 4px transparent;
+            border-top-color: $secondary;
+            border-left-color: $secondary;
+            border-radius: 50%;
+            animation: loader1 1.2s linear infinite;
+        }
     }
 
-    .loader-container .loader1{
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 100px;
-        height: 100px;
-        border: solid 4px transparent;
-        border-top-color: $primary;
-        border-left-color: $primary;
-        border-radius: 50%;
-        animation: loader 1.6s linear infinite;
-    }
-
-    .loader-container .loader2{
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 75px;
-        height: 75px;
-        border: solid 4px transparent;
-        border-top-color: $tertiary;
-        border-left-color: $tertiary;
-        border-radius: 50%;
-        animation: loader2 1.4s linear infinite;
-    }
-
-    .loader-container .loader3{
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 50px;
-        height: 50px;
-        border: solid 4px transparent;
-        border-top-color: $secondary;
-        border-left-color: $secondary;
-        border-radius: 50%;
-        animation: loader 1.2s linear infinite;
-    }
 
     @keyframes loader-spinner{
         0% {
             transform: scale(1);
-        }
-        
+        }   
         100% {
             transform: scale(1);
         }
     }
 
-    @keyframes loader{
+    @keyframes loader1{
         from {
             transform: translate(-50%, -50%) rotate(0deg);
         }
@@ -409,7 +410,7 @@ $tertiary:  #99e2d0;
         right: 0;
         margin: 0;
 
-        .corps-page__heading {
+        &__heading {
             width: 95%;
             margin: 1.5rem 0 0 1rem;
             align-items: center;
