--- a/sass/style.css
+++ b/sass/style.css
@@ -1,6 +1,13 @@
 @charset "UTF-8";
 @media (max-width: 480px) {
   /* Ici on va definir les styles CSS pour les plus petits écrans*/
+  .loader__1, .loader__2, .loader__3 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    border: solid 0.25rem transparent;
+    border-radius: 50%;
+  }
   * {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
@@ -39,41 +46,26 @@
     background: #99e2d0;
   }
   .loader__1 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
     width: 100px;
     height: 100px;
-    border: solid 4px transparent;
     border-top-color: #9356dc;
     border-left-color: #9356dc;
-    border-radius: 50%;
     -webkit-animation: loader1 1.6s linear infinite;
             animation: loader1 1.6s linear infinite;
   }
   .loader__2 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
     width: 75px;
     height: 75px;
-    border: solid 4px transparent;
     border-top-color: white;
     border-left-color: white;
-    border-radius: 50%;
     -webkit-animation: loader2 1.4s linear infinite;
             animation: loader2 1.4s linear infinite;
   }
   .loader__3 {
-    position: absolute;
-    top: 50%;
-    left: 50%;
     width: 50px;
     height: 50px;
-    border: solid 4px transparent;
     border-top-color: #ff79da;
     border-left-color: #ff79da;
-    border-radius: 50%;
     -webkit-animation: loader1 1.2s linear infinite;
             animation: loader1 1.2s linear infinite;
   }
