--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,20 @@ $primary: #9356dc;
 $secondary: #ff79da;
 $tertiary:  #99e2d0;
 
+@mixin loader($color: $primary, $size: 10px) {
+    width: $size;
+    height: $size;
+    border-top-color: $color;
+    border-left-color: $color;
+}
+
+%loader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    border: solid 0.25rem transparent;
+    border-radius: 50%;
+}
         
     * {
         box-sizing: border-box;
@@ -46,42 +60,21 @@ $tertiary:  #99e2d0;
         background: $tertiary;
 
         &__1 {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 100px;
-            height: 100px;
-            border: solid 4px transparent;
-            border-top-color: $primary;
-            border-left-color: $primary;
-            border-radius: 50%;
+            @include loader($primary, 100px);
+            @extend %loader;
             animation: loader1 1.6s linear infinite;
         }
 
         &__2 {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 75px;
-            height: 75px;
-            border: solid 4px transparent;
-            border-top-color: white;
-            border-left-color: white;
-            border-radius: 50%;
+            @include loader(white, 75px);
+            @extend %loader;
             animation: loader2 1.4s linear infinite;
         }
         
     
         &__3 {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            width: 50px;
-            height: 50px;
-            border: solid 4px transparent;
-            border-top-color: $secondary;
-            border-left-color: $secondary;
-            border-radius: 50%;
+            @include loader($secondary, 50px);
+            @extend %loader;
             animation: loader1 1.2s linear infinite;
         }
     }
