--- a/sass/style.scss
+++ b/sass/style.scss
@@ -132,6 +132,11 @@ a {
         margin: 0;
         padding: 0;
     }
+    @media #{$small-up} {
+        width: 80%;
+        margin: auto;
+        padding: 0;
+    }
 }
 
 .entete {
